test/features/errors/semantic/e1054_invalid_dereference.spl
# E1054: Invalid Dereference

Feature: E1054 - Invalid Dereference Operation
  As a Simple compiler
  I want to detect invalid dereference operations
  So that only pointer-like types can be dereferenced

  Background:
    Given I have the Simple compiler

  Scenario: Dereferencing non-pointer type
    When I compile:
      '''
      fn test():
        val x = 42
        val y = *x  # Error: cannot dereference i32
      '''
    Then I should see error E1054 at line 3
    And the error message should be "cannot dereference type `{type}`"
    And the label should indicate "cannot dereference"
    And the help should suggest "only pointer-like types can be dereferenced"

  Scenario: Dereferencing string
    When I compile:
      '''
      fn test():
        val s = "hello"
        val c = *s  # Error: cannot dereference string
      '''
    Then I should see error E1054

  Scenario: Valid pointer dereference
    When I compile:
      '''
      fn test():
        val x = 42
        val ptr = &x
        val y = *ptr  # OK: dereferencing pointer
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val x = 42
        val y = *x
      '''
    Then I should see error E1054
    And the error message should contain "역참조 불가"
